--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
   <title>Digital Booster School - Cursos para creadores de contenido</title>
 </head>
-<body>
+<body class="body">
   <header class="header">
     <a href="./index.html">
       <img class="header-logo" src="./images/digitalbooster_logo.png" alt="Logo Digital Booster School">
