--- a/index-old.html
+++ b/index-old.html
@@ -1,53 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-   <!-- Mis estilos -->
-<link rel="stylesheet" href="../css/style.css">
-
-<title>Cursos - Digital Booster School</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <title>Digital Booster School - Cursos para creadores de contenido</title>
 </head>
 <body class="body">
-    <header class="header">
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-            <a class="navbar-brand" href="./../index.html"><img class="rounded float-left header-logo" src="../images/digitalbooster_logo.png" alt="Logo Digital Booster School"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="./nosotros.html">Quienes Somos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./coleccion.html">Cursos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./contactar.html">Contactar</a>
-                </li>
-                <li class="nav-item">
-                    <button type="button" class="btn btn-link">Entrar</button>
-                </li>
-                <li class="nav-item">
-                    <button type="button" class="btn btn-outline-primary">Suscríbete ahora</button>
-                </li>
-                </ul>
-            </div>
-            </div>
-        </nav>
-    </header>
-<!-- Comienza el contenido -->
+  <header class="header">
+    <a href="./index.html">
+      <img class="header-logo" src="./images/digitalbooster_logo.png" alt="Logo Digital Booster School">
+    </a>
+    <nav>
+      <ul>
+        <li><a href="./pages/nosotros.html">Quienes somos</a></li>
+        <li><a href="./pages/coleccion.html">Cursos</a></li>
+        <li><a href="./contactar.html">Contactar</a></li>
+        <li><a href="./pages/entrar.html">Entrar</a></li>
+        <li><button class="btn-cursos"><a href="./pages/suscripcion.html">Suscríbete ahora</a></button></li>
+      </ul>
 
-<!-- Comienza el footer --> 
+    </nav>
+  </header>
+  <!-- Comienza el contenido -->
+  <main class="main-grid">
+    <!-- Seccion Slider -->
+    <section class="slider-section">
+      <img src="./images/slider-1.jpeg" alt="Cursos para creadores de contenido">
+        <h1 class="title-slider">Cursos para creadores de contenido</h1>
+      <div class="visto" ><p>Visto en:</p>
+        <img src="./images/el_pais.webp" alt="Referencia el Pais">
+        <img src="./images/tve.webp" alt="Referencia TVE">
+        <img src="./images/el_pais.webp" alt="Referencia el Pais">
+        <img src="./images/tve.webp" alt="Referencia TVE">
+        <img src="./images/el_pais.webp" alt="Referencia el Pais">
+        <img src="./images/tve.webp" alt="Referencia TVE">
+      </div>
+    </section>
+   <!-- Seccion Cursos -->
+    <section class="cursos cursos-grid">
+      <h2 class="title-cursos">Creciendo Siempre</h2>
+      <p class="subtitle-cursos">Encuentra aquí los nuevos cursos. Todas las semanas tenemos novedades. El mayor catálogo de cursos para creadores de contenido.
+      </p></h2>
+      <article class="curso curso1">
+        <h3>Curso 1</h3>
+      </article>
+      <article class="curso curso2">
+        <h3>Curso 2</h3>
+      </article>
+      <article class="curso curso3">
+        <h3>Curso 3</h3>
+      </article>
+      <article class="curso curso4">
+        <h3>Curso 4</h3>
+      </article>
+      <article class="curso curso5">
+        <h3>Curso 5</h3>
+      </article>
+      <article class="curso curso6">
+        <h3>Curso 6</h3>
+      </article>
+      <button class="btn-cursos">
+        <a href="./pages/coleccion.html">Ver todos los cursos</a>
+      </button>
+      </section>
+    <!-- Seccion Profesores -->
+    <section class="profesores profesores-grid">
+      <article class="profesor profesor1">
+        <h3>Profesor 1</h3>
+      </article>
+      <article class="profesor profesor2">
+        <h3>Profesor 2</h3>
+      </article>
+      <article class="profesor profesor3">
+        <h3>Profesor 3</h3>
+      </article>
+      <article class="profesor profesor4">
+        <h3>Profesor 4</h3>
+      </article>
+      <article class="profesor profesor5">
+        <h3>Profesor 5</h3>
+      </article>
+      <article class="profesor profesor6">
+        <h3>Profesor 6</h3>
+      </article>
+      <button class="btn-profesor">
+        <a href="./pages/profesores.html">Conoce a los profesores</a>
+      </button>
+    </section>
 
-<footer class="footer">
-    <hr>
-      <img class="footer-logo" src="../images/digitalbooster_logo.png" alt="Logo Digital Booster School">
+  </main>
+  <!-- Comienza el footer --> 
+	<footer class="footer">
+	  <hr>
+      <img class="footer-logo" src="./images/digitalbooster_logo.png" alt="Logo Digital Booster School">
         <div class="icon">
           <a href="https://www.linkedin.com/company/73034139/admin/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
             <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/></svg>
@@ -66,11 +117,6 @@
           </a>
         </div>
       <p>© 2022 Digital Booster School, todos los derechos reservados.</p>
-      <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-</footer>
-</body>
-</html>
-    
+	</footer>
 </body>
 </html>
