--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </p>
         <div class="row mt-4 mb-3 justify-content-around">
             <div class="card mt-3" style="width: 25rem;">
-                <img src="./images/curso-img.png" class="card-img-top" alt="...">
+                <img src="./images/curso-img.png" class="card-img-top" alt="Curso 1">
                 <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="card mt-3" style="width: 25rem;">
-                <img src="./images/curso-img.png" class="card-img-top" alt="...">
+                <img src="./images/curso-img.png" class="card-img-top" alt="Curso 2">
                 <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="card mt-3" style="width: 25rem;">
-                <img src="./images/curso-img.png" class="card-img-top" alt="...">
+                <img src="./images/curso-img.png" class="card-img-top" alt="Curso 3">
                 <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -91,7 +91,7 @@
         </div>
         <div class="row mt-4 mb-3 justify-content-around">
             <div class="card card mt-3" style="width: 25rem;">
-                <img src="./images/curso-img.png" class="card-img-top" alt="...">
+                <img src="./images/curso-img.png" class="card-img-top" alt="Curso 4">
                 <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -99,7 +99,7 @@
                 </div>
             </div>
             <div class="card mt-3" style="width: 25rem;">
-                <img src="./images/curso-img.png" class="card-img-top" alt="...">
+                <img src="./images/curso-img.png" class="card-img-top" alt="Curso 5">
                 <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="card mt-3" style="width: 25rem;">
-                <img src="./images/curso-img.png" class="card-img-top" alt="...">
+                <img src="./images/curso-img.png" class="card-img-top" alt="Curso 6">
                 <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -124,37 +124,37 @@
         <h2 class="h2 text-center mt-4 mb-3">Conviertete en la mejor versión de ti mismo</br>con la ayuda de los mejores Creadores de Contenido y Formadores</h2>
         <div class="row mt-4 mb-3 justify-content-around">
             <div class="card mt-3" style="width: 12rem;">
-                <img src="./images/profesor.png" class="card-img-top" alt="...">
+                <img src="./images/profesor.png" class="card-img-top" alt="profesor 1">
                 <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
             <div class="card mt-3" style="width: 12rem;">
-                <img src="./images/profesor.png" class="card-img-top" alt="...">
+                <img src="./images/profesor.png" class="card-img-top" alt="profesor 2">
                 <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
             <div class="card mt-3" style="width: 12rem;">
-                <img src="./images/profesor.png" class="card-img-top" alt="...">
+                <img src="./images/profesor.png" class="card-img-top" alt="profesor 3">
                 <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
             <div class="card card mt-3" style="width: 12rem;">
-                <img src="./images/profesor.png" class="card-img-top" alt="...">
+                <img src="./images/profesor.png" class="card-img-top" alt="profesor 4">
                 <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
             <div class="card mt-3" style="width: 12rem;">
-                <img src="./images/profesor.png" class="card-img-top" alt="...">
+                <img src="./images/profesor.png" class="card-img-top" alt="profesor 5">
                 <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
             <div class="card mt-3" style="width: 12rem;">
-                <img src="./images/profesor.png" class="card-img-top" alt="...">
+                <img src="./images/profesor.png" class="card-img-top" alt="profesor 6">
                 <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
